--- a/static/style/card.css
+++ b/static/style/card.css
@@ -10,3 +10,38 @@
     background: #fff;
     box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
 }
+.actor_cards{
+    position: relative;
+
+    display: inline-block;
+
+    margin-bottom: 20px;
+    padding: 24px;
+
+    border-radius: 2px;
+    background: #fff;
+    box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
+}
+.alive_card{
+    position: relative;
+
+    display: inline-block;
+
+    margin-bottom: 20px;
+    padding: 24px;
+
+    border-radius: 2px;
+    background: #fff;
+    box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
+}
+.dead_card{
+    position: relative;
+
+    display: inline-block;
+    margin-bottom: 20px;
+    padding: 24px;
+
+    border-radius: 2px;
+    background: #fff;
+    box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
+}
