--- a/static/style/table.css
+++ b/static/style/table.css
@@ -21,6 +21,7 @@ table th,
 table td {
     margin: 0;
     padding: 6px;
+    text-align: center;
 }
 
 table tr:nth-child(even) {
@@ -29,4 +30,43 @@ table tr:nth-child(even) {
 
 table th.action-column {
     background: rgb(203, 75, 70);
+}
+
+.actor_names{font-size: x-large}
+
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sityellow on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
